[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menus/Buttons/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menus/MenuScenes/BugReportInfo.gd" type="Script" id=2]
[ext_resource path="res://Resources/Fonts/BugReport.tres" type="DynamicFont" id=3]
[ext_resource path="res://Menus/MenuScenes/Menu.gd" type="Script" id=4]
[ext_resource path="res://Resources/Fonts/MenuTitle.tres" type="DynamicFont" id=5]
[ext_resource path="res://Menus/Buttons/GenericButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Resources/Fonts/agencyfb-boldcondensed.ttf" type="DynamicFontData" id=7]

[sub_resource type="Theme" id=1]
OptionButton/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
OptionButton/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
OptionButton/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
OptionButton/colors/font_color_pressed = Color( 1, 1, 1, 1 )
OptionButton/constants/arrow_margin = 2
OptionButton/constants/hseparation = 2
OptionButton/fonts/font = null
OptionButton/icons/arrow = null
OptionButton/styles/disabled = null
OptionButton/styles/focus = null
OptionButton/styles/hover = null
OptionButton/styles/normal = null
OptionButton/styles/pressed = null
PopupMenu/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = ExtResource( 3 )
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = null
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = null
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 7 )

[node name="BugsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
menu_scene_id = 7

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.756863, 0.788235, 0.756863, 0.560784 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -498.5
margin_right = 500.0
margin_bottom = 498.5
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1000.0
margin_bottom = 165.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.2, 0.207843, 0.2, 1 )
text = "Bug Report"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 181.0
margin_right = 1000.0
margin_bottom = 1009.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 1000.0
margin_bottom = 828.0
custom_constants/separation = 16

[node name="BugReportInfo" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 1000.0
margin_bottom = 564.0
custom_constants/separation = 16
script = ExtResource( 2 )

[node name="Username" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo"]
margin_right = 1000.0
margin_bottom = 64.0
custom_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo/Username"]
margin_left = 159.0
margin_top = 5.0
margin_right = 374.0
margin_bottom = 59.0
rect_min_size = Vector2( 215, 0 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.2, 0.207843, 0.2, 1 )
text = "Itch Username:   "
align = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo/Username"]
margin_left = 390.0
margin_right = 840.0
margin_bottom = 64.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = ExtResource( 3 )
align = 1
placeholder_text = "Not Required"
placeholder_alpha = 0.25

[node name="Severity" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo"]
margin_top = 80.0
margin_right = 1000.0
margin_bottom = 140.0
custom_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo/Severity"]
margin_left = 159.0
margin_top = 3.0
margin_right = 374.0
margin_bottom = 57.0
rect_min_size = Vector2( 215, 0 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.2, 0.207843, 0.2, 1 )
text = "Severity: "
align = 2

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo/Severity"]
margin_left = 390.0
margin_right = 840.0
margin_bottom = 60.0
rect_min_size = Vector2( 450, 0 )
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "Low (Something Looks Wrong)"
align = 1
items = [ "Low (Something Looks Wrong)", null, false, 0, null, "Medium (Game is Unplayable)", null, false, 1, null, "High (Game Crashed)", null, false, 2, null ]
selected = 0

[node name="BugDescription" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo"]
margin_top = 156.0
margin_right = 1000.0
margin_bottom = 564.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo/BugDescription"]
margin_right = 1000.0
margin_bottom = 54.0
rect_min_size = Vector2( 215, 0 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.2, 0.207843, 0.2, 1 )
text = "Bug Description"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo/BugDescription"]
margin_top = 58.0
margin_right = 1000.0
margin_bottom = 408.0
rect_min_size = Vector2( 1000, 350 )
custom_fonts/font = SubResource( 2 )
wrap_enabled = true

[node name="HTTPRequest" type="HTTPRequest" parent="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo"]

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 580.0
margin_right = 1000.0
margin_bottom = 828.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 320.0
margin_right = 680.0
margin_bottom = 248.0
custom_constants/separation = 16

[node name="BackButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 360.0
button_text = "Cancel"
game_scene_id = -1
menu_scene_id = 6
rect_color = Color( 0.960784, 0.796078, 0.360784, 1 )

[node name="SendButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 132.0
margin_right = 360.0
margin_bottom = 248.0
rect_min_size = Vector2( 360, 116 )
button_text = "Send Report"
game_scene_id = -1
menu_scene_id = 6
signal_name = "send_bug_report"
rect_color = Color( 0.960784, 0.796078, 0.360784, 1 )

[node name="MoveTween" type="Tween" parent="."]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo/Username/LineEdit" to="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo" method="_on_Username_text_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo/Severity/OptionButton" to="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo" method="_on_Severity_item_selected"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo/BugDescription/TextEdit" to="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo" method="_on_Description_text_changed"]
[connection signal="request_completed" from="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo/HTTPRequest" to="VBoxContainer/HBoxContainer/VBoxContainer/BugReportInfo" method="_on_HTTPRequest_request_completed"]
